fix z-index

--- a/css/index.css
+++ b/css/index.css
@@ -47,6 +47,7 @@
   opacity: 0;
   pointer-events: none;
   transition: all 0.3s ease-out;
+  z-index: 3;
 }
 
 .modal.open,
